# recipe

./: .gitignore  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20211004124244_create_users_table.up.sql
backend/src/: auth.rs  database.rs  error.rs  errors.rs  handlers.rs  main.rs  models.rs
backend/src/models/: user.rs
db/: my.cnf
frontend/: .prettierignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  Main.elm  index.tsx
frontend/src/components/: LoginButton.tsx  LogoutButton.tsx
nginx/: nginx.conf
